# Accelerando

./: README.md  meson.build  meson_options.txt
examples/: benchmarks.cpp  example.cpp  tests.cpp
headers/: accelerando.hpp
headers/accelerando/: assert.hpp  benchmark.hpp  main.hpp  map.hpp  registry.hpp  test.hpp
sources/: assert.cpp  benchmark.cpp  main.cpp  registry.cpp  test.cpp
